--- a/index.css
+++ b/index.css
@@ -10,10 +10,18 @@ body {
     background-color: #797d8f;
     width: 100%;
     color: white;
+    background-image: url('http://getwallpapers.com/wallpaper/full/4/a/1/299404.jpg');
+    background-size: cover;
+}
+
+.nerdQuestion {
+    font-size: 22px;
+    margin-bottom: 20px;
 }
 
 header {
     text-align: center;
+    margin: 50px 0;
 }
 
 .quizStart {
@@ -22,7 +30,17 @@ header {
     border: 2px solid white;
     border-radius: 3px;
     width: 75%;
+    background-color: rgba(19, 19, 19, 0.8);
 }
+
+.borderBox {
+    width: 75%;
+    background-color: rgba(19, 19, 19, 0.8);
+    padding: 25px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+  }
 
 .hidden {
     display: none;
@@ -48,11 +66,12 @@ li {
 button {
     padding: 20px;
     border: none;
-    background-color: rgb(13, 39, 41);
+    background-color: rgb(21, 85, 21);
     color: #ffffff;
     font-size: 18px;
     text-transform: uppercase;
     border-radius: 3px;
     cursor: pointer;
-    margin-top: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
